# python-glasgow-meetup-dagster

./: .env.template  .gitignore  Demo.ipynb  README.md  pyproject.toml  workspace.yaml
.dagster_home/: dagster.yaml
scritps/: download_and_prep_data.py
tests/: conftest.py  test_asset_materialization.py  test_graphs.py  test_hooks.py  test_ops.py  test_schedules.py
windy/: __init__.py  assets.py  graphs.py  hooks.py  io_managers.py  jobs.py  ops.py  partition_defs.py  resources.py  schedules.py
